--- a/package.json
+++ b/package.json
@@ -3,22 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.8.2",
-    "@material-ui/icons": "^4.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^8.0.2",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.2",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "typescript": "^3.7.4"
-  },
-  "devDependencies": {
-    "prettier": "^1.19.1"
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "core-js": "^3.14.0",
+    "prettier": "^2.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.4",
+    "web-vitals": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,18 +38,6 @@
     ]
   },
   "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "tabWidth": 4,
-    "overrides": [
-      {
-        "files": [
-          "*.css"
-        ],
-        "options": {
-          "singleQuote": false
-        }
-      }
-    ]
+    "printWidth": 99
   }
 }
